[metadata]
name = Glaceon
version = 0.0.1
license = LGPL-3.0
author = Ujimatsu Chiya
author_email = ujimatsuchiya016@gmail.com
maintainer = Ujimatsu Chiya
maintainer_email = ujimatsuchiya016@gmail.com
description = A random number generator on algorithmic questions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ujimatsu-Chiya/Glaceon
keywords = python algorithm icpc acm oi

[options]
packages = find:

[options.packages.find]
where = .
